--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "antd": "^3.1.3",
     "auth0-lock": "^11.0.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
