--- a/package.json
+++ b/package.json
@@ -39,5 +39,10 @@
     "prettier-eslint": "^8.8.0",
     "react-app-rewire-less": "^2.1.0",
     "react-app-rewired": "^1.4.0"
+  },
+  "proxy": {
+    "/api": {
+      "target": "http://localhost:9000"
+    }
   }
 }
