--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "antd": "^3.1.3",
     "auth0-lock": "^11.0.1",
+    "google-map-react": "^0.28.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-router-dom": "^4.2.2",
