--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "antd": "^3.1.3",
     "auth0-lock": "^11.1.0",
+    "google-map-react": "^0.28.0",
     "history": "^4.7.2",
     "jwt-decode": "^2.2.0",
     "react": "^16.2.0",
