--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "private": true,
   "dependencies": {
     "antd": "^3.1.3",
-    "google-map-react": "^0.28.0",
     "auth0-lock": "^11.1.0",
     "google-map-react": "^0.28.0",
     "history": "^4.7.2",
@@ -18,6 +17,7 @@
     "react-router-redux": "^5.0.0-alpha.9",
     "react-scripts": "1.0.17",
     "redux": "^3.7.2",
+    "redux-promise": "^0.5.3",
     "whatwg-fetch": "^2.0.3"
   },
   "scripts": {
