--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "jwt-decode": "^2.2.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-google-maps": "^9.4.5",
     "react-promise": "^2.0.1",
     "react-redux": "^5.0.6",
     "react-router": "^4.2.0",
